Add new event LoginRequiredEvent when a login input is required (#531)
* Introduce notion of event manager & add LoginRequiredEvent

* Fire event in OAuthProvider

* gitignore

* Add tests

* Fix test never ending

* Add description to event